# MapleProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  PlayerPrediction.md  ProjectSetting.json  README.md  TechnicalOverview.md  pch.h
Assets/: Login.world  (+10 more)
Source/: Animation.cpp  Animation.h  AssetExportHelper.cpp  CMakeLists.txt  CollisionTag.hpp  Database.h  EndPoint.hpp  Export.h  Login.cpp  Login.h  MapleClient.cpp  MapleClient.h  MapleServer.cpp  MapleServer.h  MapleWorld.cpp  MapleWorld.h  Mob.cpp  Mob.h  MobAnimation.cpp  MobAnimation.h  MobHitbox.cpp  MobHitbox.h  PacketEvent.hpp  Player.cpp  Player.h  PlayerAnimation.cpp  PlayerAnimation.h  PlayerCamera.cpp  PlayerCamera.h  PlayerCamera2D.cpp  PlayerCamera2D.h  PlayerMovement.cpp  PlayerMovement.h  PlayerMovement2D.cpp  PlayerMovement2D.h  Skill.cpp  Skill.h  SkillHitBox.cpp  SkillHitbox.h  Test.cpp  (+3 more)
Source/AI/: AIStrategy.cpp  AIStrategy.h  BasicAI.cpp  BasicAI.h
Source/Client/: MapleWorld.cpp
Source/Item/: Item.cpp  Item.h  ItemDB.cpp  ItemDB.h
Source/Mob/: Mob.cpp  Mob.h  MobAnimation.cpp  MobAnimation.h  MobAnimationController.cpp  MobAnimationController.h  MobEvents.hpp  MobHitbox.cpp  MobHitbox.h  MobSpawner.cpp  MobSpawner.h  MobStatus.hpp
Source/Mob/Client/: Mob.cpp
Source/Mob/Server/: Mob.cpp
Source/Packet/: ChangeWorldPacket.cpp  ChangeWorldPacket.h  ChangeWorldPacket.hpp  EntityRemovePacket.hpp  ItemDropPacket.hpp  MobHitPacket.h  MobSpawnPacket.hpp  MobStatePacket.hpp  PlayerDespawnPacket.hpp  PlayerInputPacket.cpp  PlayerInputPacket.h  PlayerInputPacket.hpp  PlayerJoinPacket.cpp  PlayerJoinPacket.h  PlayerJoinSuccessPacket.cpp  PlayerJoinSuccessPacket.h  PlayerJoinWorldPacket.cpp  PlayerJoinWorldPacket.h  PlayerLeavePacket.h  PlayerLeavePacket.hpp  PlayerSpawnPacket.hpp  PlayerStatePacket.cpp  PlayerStatePacket.h  PlayerStatePacket.hpp  SkillStatePacket.h  SkillStatePacket.hpp  SkillUsingPacket.h
Source/Player/: Player.cpp  Player.h  PlayerAnimation.cpp  PlayerAnimation.h  PlayerCamera2D.cpp  PlayerMovement2D.h  PlayerPickup.h  PlayerSkillManager.cpp  PlayerSkillManager.h
Source/Player/Client/: PlayerMovement2D.cpp
Source/Player/Server/: PlayerMovement2D.cpp  PlayerPickup.cpp
Source/Server/: MapleWorld.cpp
Source/UI/: HPUI.cpp  HPUI.h
Source/client/: AnimationData.cpp  Animator.cpp  Login.cpp  MapleClient.cpp  MapleServer.cpp  NameTag.cpp
Source/client/AI/: BasicAI.cpp
Source/client/Item/: Item.cpp  ItemDB.cpp
Source/client/Mob/: Mob.cpp  MobAnimation.cpp  MobAnimationController.cpp  MobAnimatorController.cpp  MobSoundController.cpp  MobSpawner.cpp
Source/client/NPC/: NPC.cpp  NPCDB.cpp
Source/client/Player/: NameTag.cpp  PlayerAnimation.cpp  PlayerAnimator.cpp  PlayerCamera2D.cpp  PlayerMovement.cpp  PlayerMovement2D.cpp  PlayerPickup.cpp  PlayerSoundController.cpp
Source/client/Skill/: Skill.cpp  SkillManager.cpp
Source/client/System/: Animation.cpp  AnimationData.cpp  Animator.cpp  Login.cpp
Source/client/UI/: Button.cpp  DialogUI.cpp  HPUI.cpp  InventorySlotUI.cpp  InventoryUI.cpp  NumberUI.cpp  UI.cpp  UIInputManager.cpp  UIRect.cpp
Source/client/World/: MapleClient.cpp  MapleServer.cpp  MapleWorld.cpp  Portal.cpp
Source/common/: DBThread.cpp  Database.cpp  Inventory.cpp  RotateObject.cpp  Test.cpp  User.cpp
Source/common/Item/: Item.cpp  ItemDB.cpp  ItemDropManager.cpp  ItemHitbox.cpp
Source/common/Mob/: MobData.cpp  MobHitbox.cpp  MobMovement.cpp
Source/common/Phys/: Foothold.cpp  FootholdMovement.cpp
Source/common/Physics/: Foothold.cpp  FootholdMovement.cpp
Source/common/Player/: Inventory.cpp  Job.cpp  Player.cpp  PlayerHitbox.cpp  PlayerMovement.cpp  PlayerSkillManager.cpp  PlayerTickController.cpp  User.cpp
Source/common/Skill/: Buff.cpp  MovementBuff.cpp  Projectile.cpp  ProjectileHitBox.cpp  ProjectileInstance.cpp  SkillCondition.cpp  SkillHitBox.cpp  SkillManager.cpp
Source/common/System/: AssetExportHelper.cpp  DBThread.cpp  Database.cpp
Source/common/World/: ItemPool.cpp  MapleWorld.cpp
Source/include/: Animation.h  AnimationData.h  Animator.h  AssetExportHelper.h  CollisionTag.hpp  Database.h  Inventory.h  Login.h  MapleClient.h  MapleServer.h  MapleWorld.h  NameTag.h  Test.h  User.h  UserEvent.hpp  UserManager.h
Source/include/AI/: AIStrategy.h  BasicAI.h
Source/include/Item/: Item.h  ItemDB.h  ItemDropManager.h  ItemHitbox.h  ItemInfo.hpp
Source/include/Mob/: Mob.h  MobAnimation.h  MobAnimationController.h  MobAnimatorController.h  MobData.h  MobEvents.hpp  MobHitbox.h  MobMovement.h  MobSoundController.h  MobSpawner.h
Source/include/NPC/: NPC.h  NPCDB.h  NPCInfo.hpp
Source/include/Packet/: HeartbeatPacket.hpp  InventorySlotSwapPacket.hpp  InventorySyncPacket.hpp  ItemDespawnPacket.hpp  ItemDropPacket.hpp  KeyPacket.hpp  MobSpawnPacket.hpp  MobStatePacket.hpp  PlayerDespawnPacket.hpp  PlayerInputPacket.hpp  PlayerJoinPacket.hpp  PlayerJoinSuccessPacket.hpp  PlayerJoinWorldPacket.hpp  PlayerSpawnPacket.hpp  PlayerStatePacket.hpp  PlayerTokenPacket.hpp  SkillUsingPacket.hpp
Source/include/Phys/: CollisionTag.hpp  Foothold.h
Source/include/Physics/: Foothold.h  FootholdMovement.h
Source/include/Player/: IPlayerTickable.h  Inventory.h  Job.h  Player.h  PlayerAnimation.h  PlayerAnimator.h  PlayerCamera2D.h  PlayerHitbox.h  PlayerMovement.h  PlayerMovement2D.h  PlayerPickup.h  PlayerSkillManager.h  PlayerSoundController.h  PlayerTickController.h  User.h  UserManager.h
Source/include/Skill/: Buff.h  MovementBuff.h  MovementSkill.h  Projectile.h  ProjectileHitBox.h  ProjectileInstance.h  Skill.h  SkillCondition.h  SkillHitbox.h  SkillManager.h
Source/include/System/: Animation.h  AnimationData.h  Animator.h  DBThread.h  Database.h  EndPoint.hpp  Login.h
Source/include/UI/: Button.h  DialogUI.h  InventorySlotUI.h  InventoryUI.h  NumberUI.h  UI.h  UIInputManager.h  UIRect.h
Source/include/World/: Entity.h  EntityRouter.h  ItemPool.h  MapleClient.h  MapleServer.h  MapleWorld.h  Portal.h
Source/server/: EntityRouter.cpp  MapleServer.cpp  UserManager.cpp
Source/server/AI/: BasicAI.cpp
Source/server/Item/: Item.cpp
(+127 files in other folders)
